--- a/views/_nav_user.erb
+++ b/views/_nav_user.erb
@@ -6,21 +6,7 @@
   </form>
 	<form action="/sessions" method='post'>
     <input type="hidden" name='_method' value='delete'>
-    <input type="submit" value='BLOG-OUT'>
+    <input type="submit" value='LOG-OUT'>
   </form>
-  <form action="/entries/printer" method='get'>
-     <input type="submit" value ='GOLD PRINTER'>
-  </form>
-  <form action="/entries/toast" method='get'>
-    <input type="submit" value ='TOAST'>
-  </form>
-  <form action="/entries/noodle" method='get'>
-      <input type="submit" value ='NOODLE'>
-  </form>
-  <form action="/entries/dinosaur" method='get'>
-      <input type="submit" value ='DINOSAUR'>
-  
-  <form action="/entries/blob" method='get'>
-      <input type="submit" value ='BLOB'>
-  </form>
+
 </div>
