--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>MARSHALLZ BLOG</title>
-	<link href='http://fonts.googleapis.com/css?family=Monofett' rel='stylesheet' type='text/css'>
+	<title>~</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
+	<link href='http://fonts.googleapis.com/css?family=Anton|Audiowide' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<center>
-		<a href="/"><h1 class="header">MARSHALL'<span>Z</span> bL0G</h1></a>
+		<a href="/"><h1 class="header">res</h1></a>
 		<% if session[:current_user] %>
     	<%= erb :'_nav_user' %>
 	  <% else %>
