Removed Marshall from blog and changed avatar display to be a full circle

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<center>
-		<a href="/"><h1 class="header">res</h1></a>
+		<a href="/"><h1 class="header">rés</h1></a>
 		<% if session[:current_user] %>
     	<%= erb :'_nav_user' %>
 	  <% else %>
