restyled buttons, added background to entry

--- a/views/users/new.erb
+++ b/views/users/new.erb
@@ -1,11 +1,11 @@
 <center>
 <h1>SIGN UP</h1>
-<div>
-	<form action="/users" method="post">
-		<input class="large" type="text" name="user[username]" placeholder="Username">
-		<input class="large" type="text" name="user[avatar]" placeholder='Avatar URL'>
-		<input class="large" type="password" name="password" placeholder="Password">
-		<input type="submit" value="SIGN UP">
-	</form>
-</div>
+	<div>
+		<form action="/users" method="post">
+			<input class="large" type="text" name="user[username]" placeholder="Username">
+			<input class="large" type="text" name="user[avatar]" placeholder='Avatar URL'>
+			<input class="large" type="password" name="password" placeholder="Password">
+			<input type="submit" value="SUBMIT">
+		</form>
+	</div>
 </center>
