--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -58,32 +58,31 @@ input[type="password"]
 
 
 input {
-    border: 5px solid black; 
-    -webkit-box-shadow: 
-      inset 0 0 8px  rgba(0,1,0,0.1),
-            0 0 16px rgba(0,1,0,0.1); 
-    -moz-box-shadow: 
-      inset 0 0 8px  rgba(0,0,0,0.1),
-            0 0 16px rgba(0,0,0,0.1); 
-    box-shadow: 
-      inset 0 0 8px  rgba(0,1,0,0.1),
-            0 0 16px rgba(0,1,0,0.1); 
-    padding: 15px;
-    background: #FEFAEB;
-    margin: 0 0 10px 0;
+  font-size: 32px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  border: 2px solid black; 
+  background-color: white;
+  -webkit-box-shadow: 
+    inset 0 0 8px  rgba(0,1,0,0.1),
+          0 0 16px rgba(0,1,0,0.1); 
+  -moz-box-shadow: 
+    inset 0 0 8px  rgba(0,0,0,0.1),
+          0 0 16px rgba(0,0,0,0.1); 
+  box-shadow: 
+    inset 0 0 8px  rgba(0,1,0,0.1),
+          0 0 16px rgba(0,1,0,0.1); 
+  padding: 15px;
+  margin: 0 0 10px 0;
 }
 
 .button {
-  appearance: button;
-        -moz-appearance: button;
-        -webkit-appearance: button;
-        text-decoration: none;
-        font-family: calibri; 
-        color: white;
-        display: inline-block; 
-        padding: 8px 8px;
-        float: right;
-        margin: 0 auto;
+  text-decoration: none;
+  font-family: calibri; 
+  display: inline-block; 
+  background-color: rgba(255, 0, 0, 0);
+  float: right;
+  margin: 0 auto;
         
 }
 
@@ -91,9 +90,9 @@ input {
 h1 {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
-	font-size: 100px;
+	font-size: 80px;
   color: white;
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
   
 
@@ -113,7 +112,7 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-size: 50px;
   color: white;
-  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
 }
 
@@ -128,7 +127,7 @@ h4 {
 a {
   color: white;
   font-family: 'Roboto', sans-serif;
-  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-width: 0.5px;
   -webkit-text-stroke-color: black;
   text-decoration: none;
 }
@@ -179,8 +178,7 @@ li {
 .center {
   position: center;
 }
- 
-  }
+
 
 .miniuser{
   display: inline-block;
