--- a/views/entries/entry.erb
+++ b/views/entries/entry.erb
@@ -1,11 +1,13 @@
 <div class="container">
 	<ul>
-		<h3>
-			<%= @entry.title %>
-		</h3>
-			<li>
-				<%= @entry.body %>
-			</li>
+		<div class="entry">
+			<h3>
+				<%= @entry.title %>
+			</h3>
+				<li>
+					<%= @entry.body %>
+				</li>
+		</div>
 	</ul>
 	<div class="button" >
 		<form action="/entries/<%= @entry.id %>/edit" method='get'>
