fixed character spacing on entry title

--- a/views/_nav_non_user.erb
+++ b/views/_nav_non_user.erb
@@ -1,5 +1,7 @@
-
 <div class="nav">
+	<form action="/" method='get'>
+  	<input type="submit" value='HOME'>
+  </form>
   <form action="/users/new" method='get'>
   	<input type="submit" value='SIGN UP'>
   </form>
