--- a/views/_nav_user.erb
+++ b/views/_nav_user.erb
@@ -1,6 +1,7 @@
-  
-
-<div class="nav">
+ <div class="nav">
+ 	<form action="/" method='get'>
+  	<input type="submit" value='HOME'>
+  </form>
 	<form action="/entries/new" method='get'>
     <input type="submit" value ='ADD POST'>
   </form>
@@ -8,5 +9,4 @@
     <input type="hidden" name='_method' value='delete'>
     <input type="submit" value='LOG-OUT'>
   </form>
-
 </div>
