--- a/views/entries/entry.erb
+++ b/views/entries/entry.erb
@@ -2,7 +2,7 @@
 	<ul>
 		<div class="entry">
 			<h3>
-				<%= @entry.title %>
+				<%= @entry.title.upcase %>
 			</h3>
 				<li>
 					<%= @entry.body %>
