--- a/views/index.erb
+++ b/views/index.erb
@@ -14,6 +14,7 @@
 							<%= entry.body %>
 							<br>
 							<h4>Author: <%= entry.user.username %></h4>
+							<h4>Tags: <%= entry.tags.join(" | ") %></h4>
 						</li>
 					</div>
 				</ul>	
