added comment for users but needs ajax hook up

--- a/views/_nav_non_user.erb
+++ b/views/_nav_non_user.erb
@@ -1,12 +1,15 @@
 <div class="nav">
 	<form action="/" method='get'>
-  	<input type="submit" value='HOME'>
+  	<input type="submit" value='SAD HOME'>
   </form>
   <form action="/users/new" method='get'>
   	<input type="submit" value='SIGN UP'>
   </form>
   <form action="/sessions/new" method='get'>
   	<input type="submit" value ='LOG-IN'>
+  </form>
+  <form action="/users/profiles" method='get'>
+  	<input type="submit" value ='COMMUNITY'>
   </form>
 </div>
 
