--- a/views/_nav_user.erb
+++ b/views/_nav_user.erb
@@ -1,6 +1,6 @@
  <div class="nav">
  	<form action="/" method='get'>
-  	<input type="submit" value='HOME'>
+  	<input type="submit" value='SAD HOME'>
   </form>
 	<form action="/entries/new" method='get'>
     <input type="submit" value ='ADD POST'>
@@ -8,5 +8,8 @@
 	<form action="/sessions" method='post'>
     <input type="hidden" name='_method' value='delete'>
     <input type="submit" value='LOG-OUT'>
+  </form>
+  <form action="/users/profiles" method='get'>
+  	<input type="submit" value ='COMMUNITY'>
   </form>
 </div>
