--- a/views/users/profiles.erb
+++ b/views/users/profiles.erb
@@ -1,5 +1,5 @@
 <center>
-	<h2 class="header">MARSHALL"S Userz</h2>
+	<h2 class="header">SAD BLOG AUTHORS</h2>
 </center>
 
 <div class='miniuser-list'>
