--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -43,11 +43,38 @@ div form {
 
 }
 
+.text-comment {
+  width: 450px;
+  display: block;
+  font-family: impact;
+  font-size: 12px;
+  color: black;
+}
+
+.btn-comment {
+  font-size: 20px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  border: 2px solid black; 
+  background-color: white;
+  -webkit-box-shadow: 
+    inset 0 0 8px  rgba(0,1,0,0.1),
+          0 0 16px rgba(0,1,0,0.1); 
+  -moz-box-shadow: 
+    inset 0 0 8px  rgba(0,0,0,0.1),
+          0 0 16px rgba(0,0,0,0.1); 
+  box-shadow: 
+    inset 0 0 8px  rgba(0,1,0,0.1),
+          0 0 16px rgba(0,1,0,0.1); 
+  padding: 15px 45px;
+  margin: 0 0 10px 0;
+}
+
 input[type="text"]
 {
-    font-family: impact;
-    font-size: 40px;
-    color: black;
+  font-family: impact;
+  font-size: 40px;
+  color: black;
 }
 
 input[type="password"]
@@ -113,8 +140,8 @@ h3 {
   font-family: 'Roboto', sans-serif;
   font-size: 50px;
   color: white;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: black;
+/*  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;*/
   letter-spacing: -3px;
 }
 
@@ -129,8 +156,8 @@ h4 {
 a {
   color: white;
   font-family: 'Roboto', sans-serif;
-  -webkit-text-stroke-width: 0.5px;
-  -webkit-text-stroke-color: black;
+/*  -webkit-text-stroke-width: 0.5px;
+  -webkit-text-stroke-color: black;*/
   text-decoration: none;
 }
 
