--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>~</title>
+	<title>Sad Blog</title>
 	<link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Anton|Audiowide' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
