jquery and scripts files added

--- a/views/_comment.erb
+++ b/views/_comment.erb
@@ -1,4 +1,4 @@
-<form action="/entries" method="post">
-		<input class="text-comment" type="text" name="entry[comment]" placeholder="Comment...">
-		<input class="btn-comment" type="submit" value="Enter">
-	</form>
+<form action="/entries/comments" method="post">
+	<input class="text-comment" type="text" name="entry[comment]" placeholder="Comment...">
+	<input class="btn-comment" type="submit" value="Enter">
+</form>
