ajax request for comments unfinished

--- a/views/_comment.erb
+++ b/views/_comment.erb
@@ -1,4 +1,4 @@
-<form action="/entries/comments" method="post">
-	<input class="text-comment" type="text" name="entry[comment]" placeholder="Comment...">
+<form id="form-comment" action="/entries/comments" method="post">
+	<textarea class="text-comment" name="comment" placeholder="Comment..."></textarea>
 	<input class="btn-comment" type="submit" value="Enter">
 </form>
