--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,6 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="/stylesheets/styles.css">
 	<link href='http://fonts.googleapis.com/css?family=Anton|Audiowide' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100' rel='stylesheet' type='text/css'>
+	<script type="text/javascript" src="/javascripts/jquery.js"></script>
+	<script type="text/javascript" src="/javascripts/scripts.js"></script>
 </head>
 <body>
 	<center>
